--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,6 +1,7 @@
 // app global css in SCSS form
 $cor-primaria: #1381A2;
 $cor-secundaria: #FF6E83;
+$borda: solid 1px #CECECE;
 
 
 /* LAYOUT */
@@ -8,13 +9,59 @@ $cor-secundaria: #FF6E83;
 .app-container {
     height: 100vh;
     width: 100vw;
+    display: flex;
+    flex-direction: column;
 }
 
-.app-header {
+header {
     padding: 16px;
     background-color: $cor-primaria;
     color: #FFFFFF;
     font-size: 18px;
+}
+
+.page-container {
+    flex: 1 0 0;
+}
+
+/* UTILIDADES */
+
+.fit {
+    width: 100%;
+    height: 100%;
+}
+
+.bordas {
+    border: $borda;
+}
+
+.cantos-redondos {
+    border-radius: 4px;
+}
+
+.padding-md {
+    padding: 16px;
+}
+
+.padding-y-md {
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
+
+.texto-centro {
+    text-align: center;
+}
+
+.texto-direita {
+    text-align: right;
+}
+
+.texto-titulo-1 {
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.4px;
+    color: #424242;
 }
 
 /* CORES */
@@ -31,10 +78,10 @@ $cor-secundaria: #FF6E83;
     background-color: #FAFAFA;
 }
 
-.texto-branco {
-    color: #FFFFFF;
+.fundo-branco {
+    background-color: #FFFFFF;
 }
 
-.padding-md {
-    padding: 16px;
+.texto-branco {
+    color: #FFFFFF;
 }
