--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -24,6 +24,11 @@ header {
     flex: 1 0 0;
 }
 
+.view-container {
+    max-width: 1000px;
+    margin: 0px auto;
+}
+
 /* UTILIDADES */
 
 .fit {
